--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "url": "git://github.com/react-boilerplate/react-boilerplate.git"
   },
   "engines": {
-    "npm": ">=3",
-    "node": ">=5"
+    "npm": "3.10.x",
+    "node": "6.10.3"
   },
   "author": "Max Stoiber",
   "license": "MIT",
